<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C2C2D8">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/jarrones"
        android:orientation="vertical"
        tools:context=".RegistroActivity">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ed_circular"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textAlignment="gravity"
            android:textColorHint="#0B0000" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#0B0000"
            android:background="@drawable/ed_circular"
            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_circular"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="32dp"
            android:textColorHint="#0B0000"
            android:ems="10"
            android:hint="@string/cedula"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_circular"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#0B0000"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_circular"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:textColorHint="#0B0000"
            android:hint="@string/correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_circular"
            android:layout_marginHorizontal="32dp"
            android:ems="10"
            android:textColorHint="#0B0000"
            android:layout_marginTop="10dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_circular"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="32dp"
            android:ems="10"
            android:textColorHint="#0B0000"
            android:hint="@string/Rcontrasena"
            android:inputType="textPassword" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ed_circular"
                android:text="@string/hombre"
                android:textColor="#0B0000" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ed_circular"
                android:text="@string/mujer"
                android:textColor="#0B0000" />

        </RadioGroup>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_circular"
            android:layout_marginTop="10dp"
            android:textColorHint="#0B0000"
            android:layout_marginHorizontal="32dp"
            android:entries="@array/Paises" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/calendar" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/ed_circular"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#0B0000"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ed_circular"
            android:text="@string/terminos"
            android:textColor="#070000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ed_circular"
            android:text="Acepto terminos y \n condiciones"
            android:layout_gravity="center"
            android:textColorHint="#0B0000" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bt_circular"
            android:text="Button"
            android:textColor="@drawable/bt_txt_circular" />

    </LinearLayout>
</ScrollView>